--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,7 @@
 CC=gcc
 CFLAGS=-std=c11 -Wall -Wextra -Werror
-
 keyfilter: keyfilter.c
 	$(CC) $(CFLAGS) keyfilter.c -o keyfilter
+
+test:
+	@../tests/test_keyfilter.sh
